tests/explicit-nulls/neg/notnull/J.java
import java.util.*;
import notnull.NotNull;

public class J {

    private static String getK() {
        return "k";
    }

    @NotNull
    public static final String k = getK();

    @NotNull
    public static String l = "l";
}
